Estrutura do html do header finalizada

--- a/index.html
+++ b/index.html
@@ -15,6 +15,27 @@
 
 </head>
 <body>
-  
+  <header class="container padding-x padding-y flex items-center space-between gap-16">
+    <img src="assets/images/Logo.svg" alt="Logo Travelgram">
+
+    <nav>
+
+      <ul role="list" class="flex gap-16 items-center">
+
+        <li><img src="assets/images/MagnifyingGlass.svg" alt=""></li>
+
+        <li class="desktop-only"><a href="#">Explorar</a></li>
+
+        <li class="desktop-only"><a href="#">Minhas viagens</a></li>
+
+        <li><img src="assets/images/pic.png" alt="Isabela Torres"></li>
+
+      </ul>
+
+    </nav>
+
+  </header>
+
+
 </body>
 </html>
