Estrura htmo main e footer finalizada

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 
 </head>
 <body>
+
+  <!-- CABEÇALHO -->
   <header class="container padding-x padding-y flex items-center space-between gap-16">
+
     <img src="assets/images/Logo.svg" alt="Logo Travelgram">
 
     <nav>
@@ -36,6 +39,88 @@
 
   </header>
 
+  <main class="container">
+
+    <section class="profileSection even-columns gap-16 items-center">
+
+      <div class="even-columns items-center">
+
+        <img src="assets/images/pic.png" alt="isabela Torres">
+
+        <div>
+
+          <h1>Isabela Torres</h1>
+
+          <span>Amante de viagens, cultura e gastronomia. 🌍✈️  
+          Aqui compartilho as histórias registradas em cada clique, explorando cantinhos fascinantes do nosso planeta a partir da movimentada cidade de São Paulo. 🏙️📸</span>
+
+        </div>
+
+      </div>
+
+      <ul role="list">
+
+        <li>
+          <img src="assets/images/MapPin.svg" alt="Map Icon"> 
+          <span>São Paulo, Brazil</span>
+        </li>
+
+        <li>
+          <img src="assets/images/AirplaneTilt.svg" alt="Air Plane Tilt Icon"> 
+          <span>37 países</span>
+        </li>
+
+        <li>
+          <img src="assets/images/Image.svg" alt="Image icon"> 
+          <span>240 fotos</span>
+        </li>
+
+      </ul>
+
+    </section>
+
+    <section class="gallerySection padding-x padding-y">
+
+      <ul role="list" class="grid">
+
+        <li><img src="assets/images/Image01.png" alt=""></li>
+
+        <li><img src="assets/images/Image02.png" alt=""></li>
+
+        <li><img src="assets/images/Image03.png" alt=""></li>
+
+        <li><img src="assets/images/Image04.png" alt=""></li>
+
+        <li><img src="assets/images/Image05.png" alt=""></li>
+
+        <li><img src="assets/images/Image06.png" alt=""></li>
+
+        <li><img src="assets/images/Image07.png" alt=""></li>
+
+        <li><img src="assets/images/Image08.png" alt=""></li>
+
+        <li><img src="assets/images/Image09.png" alt=""></li>
+
+        <li><img src="assets/images/Image10.png" alt=""></li>
+
+        <li><img src="assets/images/Image11.png" alt=""></li>
+
+        <li><img src="assets/images/Image12.png" alt=""></li>
+
+      </ul>
+
+    </section>
+
+  </main>
+
+  <footer class="padding-x padding-y even-columns items-center">
+    <span>Travelgram © 2024</span>
+
+    <div class="flex gap-16">
+      <span>Termos de uso</span>
+      <span>Política de privacidade</span>
+    </div>
+  </footer>
 
 </body>
 </html>
